golden/error/runtime_unknown_variable.test
unknown

# output:
 --> stdin:1:0
  |
1 | unknown
  | ^~~~~~~
Error: Unknown variable.
